--- a/src/components/rent/gearList.scss
+++ b/src/components/rent/gearList.scss
@@ -102,14 +102,14 @@
       margin: auto;
       padding: 10px;
 
-      button {
-    padding: 10px 20px;
-    background-color: #4caf50;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-      }
+    //   button {
+    // padding: 10px 20px;
+    // background-color: #4caf50;
+    // color: white;
+    // border: none;
+    // border-radius: 4px;
+    // cursor: pointer;
+    //   }
       // > div {
       //   width: 80%;
       //   button {
@@ -222,10 +222,10 @@
           font-size: 0.9rem;
         }
 
-        button {
-          font-size: 1rem;
-          padding: 10px 18px;
-        }
+        // button {
+        //   font-size: 1rem;
+        //   padding: 10px 18px;
+        // }
       }
     }
   }
