--- a/src/components/rent/rentals.scss
+++ b/src/components/rent/rentals.scss
@@ -19,6 +19,7 @@
 /* Rentals Container */
 .rentals-container {
   max-width: 90%;
+  margin: auto;
   padding-bottom: 40px;
   background-color: #fff;
   border-radius: 8px;
@@ -83,22 +84,22 @@ td {
 .rentals-container table td {
   white-space: nowrap; /* Prevent wrapping inside cells */
 
-  .edit-btn {
-    background-color: rgb(229, 19, 187);
-    flex: 1;
-    padding: 0.5rem 1rem;
-    font-size: 0.9rem;
-    font-weight: 600;
-    border-radius: 5px;
-    border: none;
-    cursor: pointer;
-    transition: background 0.3s ease;
-    color: #fff;
+  // .update-btn {
+  //   background-color: rgb(229, 19, 187);
+  //   flex: 1;
+  //   padding: 0.5rem 1rem;
+  //   font-size: 0.9rem;
+  //   font-weight: 600;
+  //   border-radius: 5px;
+  //   border: none;
+  //   cursor: pointer;
+  //   transition: background 0.3s ease;
+  //   color: #fff;
 
-    &:hover {
-      background-color: darken(rgb(127, 191, 125), 10%);
-    }
-  }
+  //   &:hover {
+  //     background-color: darken(rgb(127, 191, 125), 10%);
+  //   }
+  // }
 
   .cancel-btn {
     background-color: red;
