--- a/src/components/scss/_config.scss
+++ b/src/components/scss/_config.scss
@@ -84,11 +84,11 @@ $button-hover-background-color: gold; // Button background color on hover
 $button-hover-border-color: #fff; // Button border color on hover
 $button-hover-text-color: #000; // Button text color on hover
 $button-width: 200px; // Button width
-$button-margin-top-bottom: 20px 0;
+$button-margin-top-bottom: 5px 0;
 
 // Button styles
-.button {
-  background-color: $button-background-color;
+button {
+  // background-color: $button-background-color;
   color: $button-text-color;
   border-radius: $button-border-radius;
   padding: $button-padding;
@@ -265,3 +265,57 @@ a {
 .close-button:hover {
   background-color: darkred;
 }
+//  .edit-btn {
+//     background-color: rgb(244, 185, 6);
+//  } 
+ 
+ .delete-btn {
+    background-color: rgb(123, 9, 9);
+    border-color: transparent;
+    width: 100%;
+      
+    &:hover {
+    background-color: rgb(181, 11, 11);
+    // border-color: $button-hover-border-color;
+    color: rgb(255, 255, 255);
+     }
+    }
+
+  .update-btn {
+    background-color: rgb(22, 41, 183);
+    border-color: transparent;
+    width: 100%;
+    // color:rgb(83, 4, 4);
+      
+    &:hover {
+    background-color: rgb(83, 4, 4);
+    // border-color: $button-hover-border-color;
+    color: rgb(25, 189, 7);
+  }
+
+ }
+
+   .submit-btn {
+        background-color: #562222;
+    border-color: transparent;
+        padding: 20px 20px;
+        cursor: pointer;
+        border-radius: 3px;
+        width: 100%;
+      
+    &:hover {
+    background-color: rgb(83, 4, 4);
+    border-color: rgb(25, 189, 7);
+    color: rgb(25, 189, 7);
+  }
+
+ }
+
+   .search-btn {
+    background-color: rgb(34, 146, 17);
+ }
+
+ .date {
+  width: 100%;
+  padding: 10px;
+ }
