--- a/src/components/rent/ReceiptModal.scss
+++ b/src/components/rent/ReceiptModal.scss
@@ -23,16 +23,16 @@
   max-height: 90vh; /* Prevent modal from becoming too large */
   overflow-y: auto; /* Allow scrolling if content overflows */
   z-index: 1001; /* Ensure modal content is on top of overlay */
-h2 {
-  text-align: center;
-  margin-bottom: 20px;
-}
+  h2 {
+    text-align: center;
+    margin-bottom: 20px;
+  }
 
-p {
-  font-size: 14px;
-  color: black;
-  margin: 10px 0;
-}
+  p {
+    font-size: 14px;
+    color: black;
+    margin: 10px 0;
+  }
 }
 
 strong {
@@ -56,7 +56,7 @@ button {
 }
 
 .btn-print {
-  background-color: #4CAF50; /* Green for print */
+  background-color: #4caf50; /* Green for print */
   color: white;
 }
 
@@ -65,7 +65,7 @@ button {
 }
 
 .btn-download {
-  background-color: #008CBA; /* Blue for download */
+  background-color: #008cba; /* Blue for download */
   color: white;
 }
 
@@ -81,6 +81,7 @@ button {
 .btn-share:hover {
   background-color: #e6362c;
 }
+
 .btn-close {
   background-color: #999; /* Gray for close */
   color: white;
@@ -89,6 +90,7 @@ button {
 .btn-close:hover {
   background-color: #777;
 }
+
 .close-button {
   position: absolute;
   top: 155px;
