--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -1,5 +1,8 @@
 @import "../scss/config";
 
+p {
+  color: blue;
+}
 @media only screen and (min-width: 769px) {
   #nav_container {
     display: flex;
@@ -81,6 +84,7 @@
 
     p {
       margin: 0 0 10px;
+      color: blue;
     }
 
     .dropdown-button {
