--- a/src/components/Roles/Roles.scss
+++ b/src/components/Roles/Roles.scss
@@ -5,14 +5,15 @@ table {
   margin-top: 20px;
 }
 
-th, td {
+th,
+td {
   border: 1px solid #ddd;
   padding: 8px;
   text-align: left;
 }
 
 th {
-  background-color: #4CAF50;
+  background-color: #4caf50;
   color: white;
 }
 
