--- a/src/components/our services/our_services.scss
+++ b/src/components/our services/our_services.scss
@@ -8,8 +8,33 @@
     align-items: center;
     width: 75%;
     margin: auto;
-    margin-bottom: 50px;
-    padding-top: 50px;
+    margin-bottom: 100px;
+
+    h1 {
+      font-size: 1.3em;
+    }
+
+    h2 {
+      font-size: 2.5em;
+      text-align: left;
+    }
+
+    h4 {
+      font-size: 0.7em;
+    }
+
+    h5 {
+      font-size: 1.2em;
+    }
+
+    h3 {
+      font-size: 1.2rem;
+    }
+
+    p {
+      font-size: 1.0em;
+      text-align: center;
+    }
 
     #our_sercices_text {
       display: flex;
@@ -24,7 +49,7 @@
         animation: slideInFromLeft 1s ease-in-out;
 
         h2 {
-          font-size: 3.5em;
+          // font-size: 3.5em;
         }
       }
     }
@@ -44,7 +69,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 32%;
+        width: 30%;
         margin: 0;
         padding: 0;
         background-color: rgb(63, 54, 54);
