--- a/src/components/scss/_config.scss
+++ b/src/components/scss/_config.scss
@@ -15,20 +15,20 @@ h5 {
 }
 
 h1 {
-  font-size: 4.3em;
+  // font-size: 4.3em;
   margin-top: 20px;
   margin-bottom: 35px;
   line-height: 1em;
 }
 
 h2 {
-  font-size: 2.5em;
+  // font-size: 2.5em;
   margin-top: 5px;
   margin-bottom: 15px;
 }
 
 h4 {
-  font-size: 1.1em;
+  // font-size: 1.1em;
   margin-top: 0;
   margin-bottom: 10px;
 }
@@ -41,14 +41,14 @@ h5 {
 }
 
 h3 {
-  font-size: 1.8rem;
+  // font-size: 1.8rem;
   margin-top: 20px;
   margin-bottom: 0;
 }
 
 p {
   color: white;
-  font-size: 1.2em;
+  // font-size: 1.2em;
   margin-top: 0;
   margin-bottom: 20px; /* Set font size for paragraphs */
 }
@@ -87,25 +87,31 @@ $button-width: 100%; // Button width
 $button-margin-top-bottom: 5px 0;
 
 // Button styles
-.main-btn {
-  // background-color: $button-background-color;
-  color: $button-text-color;
-  border-radius: $button-border-radius;
-  padding: $button-padding;
-  font-size: $button-font-size;
-  border: $button-border;
-  margin: $button-margin-top-bottom;
-  cursor: pointer;
-  transition: background-color 0.3s, border-color 0.3s, color 0.3s;
-  width: $button-width;
-  color: $button-text-color;
+.button-container {
+  width: 200px;
 
-  &:hover {
-    background-color: $button-hover-background-color;
-    border-color: $button-hover-border-color;
-    color: $button-hover-text-color;
+  .main-btn {
+    background-color: $button-background-color;
+    color: $button-text-color;
+    border-radius: $button-border-radius;
+    padding: $button-padding;
+    font-size: $button-font-size;
+    border: $button-border;
+    margin: $button-margin-top-bottom;
+    cursor: pointer;
+    transition: background-color 0.3s, border-color 0.3s, color 0.3s;
+    width: $button-width;
+    color: $button-text-color;
+
+    &:hover {
+      background-color: $button-hover-background-color;
+      border-color: $button-hover-border-color;
+      color: $button-hover-text-color;
+    }
   }
 }
+// .main-btn {
+// }
 
 button {
   background-color: $button-background-color;
