--- a/src/components/why choose us/why_choose_us.scss
+++ b/src/components/why choose us/why_choose_us.scss
@@ -3,42 +3,68 @@
 @media only screen and (min-width: 769px) {
   #why_choose_us {
     display: flex;
-    gap: 60px;
-    width: 75%;
+    gap: 6px;
+    width: 80%;
     margin: auto;
+    h1 {
+      font-size: 1.3em;
+    }
+
+    h2 {
+      font-size: 2.5em;
+      text-align: left;
+    }
+
+    h4 {
+      font-size: 0.7em;
+    }
+
+    h5 {
+      font-size: 1.2em;
+    }
+
+    h3 {
+      font-size: 1.2rem;
+    }
+
+    p {
+      font-size: 1.0em;
+      text-align: left;
+    }
+
 
     #why_choose_us_text {
-      width: 40%;
-      text-align: left;
+      width: 50%;
+      // text-align: left;
       align-items: flex-start;
 
-      & h5 {
-        margin: 0;
-        font-size: 1.5em;
-        color: rgb(250, 185, 7);
+      // & h5 {
+      //   margin: 0;
+      //   font-size: 1.5em;
+      //   color: rgb(250, 185, 7);
 
-        span {
-          color: white;
-          margin-right: 10px;
-        }
+      //   span {
+      //     color: white;
+      //     margin-right: 10px;
+      //   }
 
-        animation: slideInFromLeft 1s ease-in-out;
-      }
+      //   animation: slideInFromLeft 1s ease-in-out;
+      // }
 
-      & h2 {
-        color: rgb(250, 185, 7);
-        font-size: 3.5em;
-        padding: 0;
-        margin: 0;
-        animation: slideInFromLeft 1s ease-in-out;
-      }
+      // & h2 {
+      //   color: rgb(250, 185, 7);
+      //   font-size: 3.5em;
+      //   padding: 0;
+      //   margin: 0;
+      //   animation: slideInFromLeft 1s ease-in-out;
+      // }
 
-      & p {
-        margin-top: 40px;
-        margin-bottom: 40px;
-        font-size: 1.2em;
-        animation: slideInFromLeft 1s ease-in-out;
-      }
+      // & p {
+      //   margin-top: 40px;
+      //   margin-bottom: 40px;
+      //   font-size: 1.2em;
+      //   animation: slideInFromLeft 1s ease-in-out;
+      // }
     }
 
     .skills {
@@ -51,13 +77,13 @@
       display: flex;
       gap: 20px;
       flex-wrap: wrap;
-      width: 60%;
+      width: 70%;
 
       #why_choose_us_card {
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 40%;
+        width: 45%;
         border: 1px solid #f0f0f0;
         padding: 20px 20px 0 20px;
         text-align: center;
@@ -81,6 +107,12 @@
         //   width: 100%;
         //   text-wrap: wrap;
         // }
+        p {
+          // font-size: 0.8em;
+          // margin-top: 10px;
+          text-align: center;
+          font-size: 0.92em;
+        }
       }
     }
   }
