--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -92,8 +92,8 @@
       padding-top: 150px;
 
       .contactCard {
-        display: flex;
-        flex-direction: column;
+        // display: flex;
+        // flex-direction: column;
         align-items: flex-start;
         justify-content: center;
         flex-wrap: wrap;
