--- a/src/components/homepage/adminDashboard.scss
+++ b/src/components/homepage/adminDashboard.scss
@@ -10,6 +10,8 @@
   margin-bottom: 20px;
   width: 60%;
   margin: auto;
+  margin-bottom: 20px;
+
 }
 
 .tabs button {
@@ -27,7 +29,10 @@
 }
 
 .tab-content {
-  margin-top: 20px;
+  width: 80%;
+  margin: auto;
+  // background-color: yellow;
+  padding: 20px;
 }
 
 .insight-tab {
