--- a/src/components/Roles/Roles.scss
+++ b/src/components/Roles/Roles.scss
@@ -1,23 +1,23 @@
 /* src/components/RoleManagement.css */
-table {
-  width: 80%;
-  border-collapse: collapse;
-  margin-top: 20px;
-}
+// table {
+//   width: 80%;
+//   border-collapse: collapse;
+//   margin-top: 20px;
+// }
 
-th,
-td {
-  border: 1px solid #ddd;
-  padding: 8px;
-  text-align: left;
-}
+// th,
+// td {
+//   border: 1px solid #ddd;
+//   padding: 8px;
+//   text-align: left;
+// }
 
-th {
-  background-color: #4caf50;
-  color: white;
-}
+// th {
+//   background-color: #4caf50;
+//   color: white;
+// }
 
-select {
-  padding: 5px;
-  margin-left: 5px;
-}
+// select {
+//   padding: 5px;
+//   margin-left: 5px;
+// }
