--- a/src/components/homepage/adminDashboard.scss
+++ b/src/components/homepage/adminDashboard.scss
@@ -31,7 +31,7 @@
 .tab-content {
   width: 80%;
   margin: auto;
-  // background-color: yellow;
+  background-color: rgb(38, 8, 8);
   padding: 20px;
 }
 
