--- a/src/components/scss/_config.scss
+++ b/src/components/scss/_config.scss
@@ -1,34 +1,36 @@
-// _config.scss
+// ====================
+// Global Styles
+// ====================
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5 {
+// Typography
+h1, h2, h3, h4, h5 {
   font-family: "Roboto", sans-serif;
   color: gold;
 }
 
 h1 {
-  // font-size: 4.3em;
   margin-top: 20px;
   margin-bottom: 35px;
   line-height: 1em;
 }
 
 h2 {
-  // font-size: 2.5em;
   margin-top: 5px;
   margin-bottom: 15px;
 }
 
+h3 {
+  margin-top: 20px;
+  margin-bottom: 0;
+}
+
 h4 {
-  // font-size: 1.1em;
   margin-top: 0;
   margin-bottom: 10px;
 }
@@ -40,17 +42,10 @@ h5 {
   margin-bottom: 15px;
 }
 
-h3 {
-  // font-size: 1.8rem;
-  margin-top: 20px;
-  margin-bottom: 0;
-}
-
 p {
   color: white;
-  // font-size: 1.2em;
   margin-top: 0;
-  margin-bottom: 20px; /* Set font size for paragraphs */
+  margin-bottom: 20px;
 }
 
 span {
@@ -58,79 +53,36 @@ span {
   margin-right: 10px;
 }
 
-.h5_h2_p {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 5px 20px;
-  text-align: center;
-}
-$page-background-color: #230b0b; // Page background color
+// ====================
+// Variables
+// ====================
 
-//input Properties
-$input-border: 1px solid gold; // Input border
-$input-background-color: transparent; // Input background color
-$input-padding: 15px 20px; // Input padding
-$input-width: 100%; // Input width
+$page-background-color: #230b0b;
 
-// Button Properties
-$button-background-color: transparent; // Button background color
-$button-text-color: gold; // Button text color
-$button-border-radius: 4px; // Button border radius
+// Input
+$input-border: 1px solid gold;
+$input-background-color: transparent;
+$input-padding: 15px 20px;
+$input-width: 100%;
+
+// Button
+$button-background-color: transparent;
+$button-text-color: gold;
+$button-border-radius: 4px;
 $button-padding: 15px 20px;
-$button-font-size: 16px; // Button font size
-$button-border: 2px solid gold; // Button border
-$button-hover-background-color: gold; // Button background color on hover
-$button-hover-border-color: #fff; // Button border color on hover
-$button-hover-text-color: #000; // Button text color on hover
-$button-width: 100%; // Button width
+$button-font-size: 16px;
+$button-border: 2px solid gold;
+$button-hover-background-color: gold;
+$button-hover-border-color: #fff;
+$button-hover-text-color: #000;
+$button-width: 100%;
 $button-margin-top-bottom: 5px 0;
 
-// Button styles
-.button-container {
-  width: 200px;
+// ====================
+// Mixins
+// ====================
 
-  .main-btn {
-    background-color: $button-background-color;
-    color: $button-text-color;
-    border-radius: $button-border-radius;
-    padding: $button-padding;
-    font-size: $button-font-size;
-    border: $button-border;
-    margin: $button-margin-top-bottom;
-    cursor: pointer;
-    transition: background-color 0.3s, border-color 0.3s, color 0.3s;
-    width: $button-width;
-    color: $button-text-color;
-
-    &:hover {
-      background-color: $button-hover-background-color;
-      border-color: $button-hover-border-color;
-      color: $button-hover-text-color;
-    }
-  }
-}
-// .main-btn {
-// }
-
-button {
-  background-color: $button-background-color;
-  padding: $button-padding;
-  font-size: $button-font-size;
-  border: $button-border;
-  margin: $button-margin-top-bottom;
-  cursor: pointer;
-  transition: background-color 0.3s, border-color 0.3s, color 0.3s;
-  width: $button-width;
-
-  &:hover {
-    background-color: $button-hover-background-color;
-    border-color: $button-hover-border-color;
-    color: $button-hover-text-color;
-  }
-}
-
-.button {
+@mixin button-styles {
   background-color: $button-background-color;
   color: $button-text-color;
   border-radius: $button-border-radius;
@@ -141,7 +93,6 @@ button {
   cursor: pointer;
   transition: background-color 0.3s, border-color 0.3s, color 0.3s;
   width: $button-width;
-  color: $button-text-color;
 
   &:hover {
     background-color: $button-hover-background-color;
@@ -150,7 +101,62 @@ button {
   }
 }
 
-// Input styles
+// ====================
+// Buttons
+// ====================
+
+.button-container {
+  width: 200px;
+
+  .main-btn {
+    @include button-styles;
+  }
+}
+
+// button {
+//   @include button-styles;
+// }
+
+.button {
+  @include button-styles;
+}
+
+// Specific Buttons
+.delete-btn {
+  @include button-styles;
+  background-color: rgb(123, 9, 9);
+
+  &:hover {
+    background-color: rgb(181, 11, 11);
+    color: white;
+  }
+}
+
+.update-btn {
+  @include button-styles;
+  background-color: rgb(22, 41, 183);
+
+  &:hover {
+    background-color: rgb(83, 4, 4);
+    color: rgb(25, 189, 7);
+  }
+}
+
+.submit-btn {
+  @include button-styles;
+  background-color: #562222;
+
+  &:hover {
+    background-color: rgb(83, 4, 4);
+    border-color: rgb(25, 189, 7);
+    color: rgb(25, 189, 7);
+  }
+}
+
+// ====================
+// Input
+// ====================
+
 .input {
   border: $input-border;
   background-color: $input-background-color;
@@ -158,17 +164,74 @@ button {
   width: $input-width;
 }
 
-a {
-  text-decoration: none;
+// ====================
+// Table
+// ====================
+
+
+.table-container {
+  overflow-x: auto; /* Allow horizontal scrolling */
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  max-width: 90%;
+  margin: auto;
+  padding-bottom: 40px;
+
+    h1, h2, h3, h4, h5 {
+  font-family: "Roboto", sans-serif;
+  color: rgb(222, 157, 6);
+  text-align: center;
 }
 
-//Animation
+}
+table {
+  width: 100%;
+  // margin:auto;
+  border-collapse: collapse;
+  margin-top: 20px;
+  border-collapse: collapse;
+  margin-top: 20px;
+  background-color: rgb(201, 178, 178);
+  border-radius: 8px;
+  overflow-x: auto;
+  white-space: nowrap; /* Prevent content wrapping */
+
+  thead th {
+    font-size: 1rem;
+    border-bottom: 2px solid #000;
+    background-color: #007bff;
+    color: rgb(255, 255, 255);
+}
+
+  th, td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
+  }
+
+  td {
+    font-size: 0.95rem;
+    color: #000;
+    border-bottom: 1px solid #ddd;
+  }
+
+  tbody tr:nth-child(even) {
+    background-color: #f8f9fa;
+  }
+
+  tbody tr:hover {
+    background-color: #e9ecef;
+  }
+}
+
+// ====================
+// Animations
+// ====================
+
 @keyframes fadeInSlideUp {
   0% {
     opacity: 0;
     transform: translateY(20px);
   }
-
   100% {
     opacity: 1;
     transform: translateY(0);
@@ -180,7 +243,6 @@ a {
     opacity: 0;
     transform: translateX(100%);
   }
-
   100% {
     opacity: 1;
     transform: translateX(0);
@@ -192,180 +254,8 @@ a {
     opacity: 0;
     transform: scale(0.8);
   }
-
   100% {
     opacity: 1;
     transform: scale(1);
   }
-}
-
-// .modal-overlay {
-//   position: fixed;
-//   top: 0;
-//   left: 0;
-//   right: 0;
-//   bottom: 0;
-//   background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent overlay */
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-//   z-index: 1000; /* Ensure it's on top of other elements */
-// }
-
-// .receipt-modal {
-//   background-color: #fff;
-//   color: black;
-//   width: 70%; /* Set modal width to 40% */
-//   padding: 20px;
-//   border-radius: 8px;
-//   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-//   max-height: 90vh; /* Prevent modal from becoming too large */
-//   overflow-y: auto; /* Allow scrolling if content overflows */
-//   z-index: 1001; /* Ensure modal content is on top of overlay */
-// h2 {
-//   text-align: center;
-//   margin-bottom: 20px;
-// }
-
-// p {
-//   font-size: 14px;
-//   color: black;
-//   margin: 10px 0;
-// }
-// }
-
-// strong {
-//   font-weight: bold;
-// }
-
-// .receipt-buttons {
-//   display: flex;
-//   justify-content: space-between;
-//   margin-top: 20px;
-// }
-
-// button {
-//   padding: 10px 20px;
-//   font-size: 16px;
-//   border: none;
-//   border-radius: 5px;
-//   cursor: pointer;
-//   transition: background-color 0.3s ease;
-//   width: 30%; /* Ensure buttons do not overlap */
-// }
-
-// .btn-print {
-//   background-color: #4CAF50; /* Green for print */
-//   color: white;
-// }
-
-.btn-print:hover {
-  background-color: #45a049;
-}
-
-.btn-download {
-  background-color: #008cba; /* Blue for download */
-  color: white;
-}
-
-.btn-download:hover {
-  background-color: #007bb5;
-}
-
-.btn-share {
-  background-color: #f44336; /* Red for share */
-  color: white;
-}
-
-.btn-share:hover {
-  background-color: #e6362c;
-}
-
-.btn-close {
-  background-color: #999; /* Gray for close */
-  color: white;
-}
-
-.btn-close:hover {
-  background-color: #777;
-}
-
-.close-button {
-  position: absolute;
-  top: 155px;
-  right: 110px;
-  background-color: red;
-  color: white;
-  border: none;
-  padding: 12px; /* Adjust padding for better size */
-  font-size: 18px;
-  cursor: pointer;
-  width: 40px; /* Set a fixed width */
-  height: 40px; /* Set a fixed height */
-  border-radius: 20%; /* Make it perfectly circular */
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.close-button:hover {
-  background-color: darkred;
-}
-//  .edit-btn {
-//     background-color: rgb(244, 185, 6);
-//  }
-
-.delete-btn {
-  background-color: rgb(123, 9, 9);
-  border-color: transparent;
-  width: 100%;
-  border-radius: $button-border-radius;
-  color: $button-text-color;
-
-  &:hover {
-    background-color: rgb(181, 11, 11);
-    // border-color: $button-hover-border-color;
-    color: rgb(255, 255, 255);
-  }
-}
-
-.update-btn {
-  background-color: rgb(22, 41, 183);
-  border-color: transparent;
-  width: 100%;
-  border-radius: $button-border-radius;
-  color: $button-text-color;
-
-  &:hover {
-    background-color: rgb(83, 4, 4);
-    // border-color: $button-hover-border-color;
-    color: rgb(25, 189, 7);
-  }
-}
-
-.submit-btn {
-  background-color: #562222;
-  border-color: transparent;
-  padding: 20px 20px;
-  cursor: pointer;
-  border-radius: 3px;
-  width: 100%;
-  border-radius: $button-border-radius;
-  color: $button-text-color;
-
-  &:hover {
-    background-color: rgb(83, 4, 4);
-    border-color: rgb(25, 189, 7);
-    color: rgb(25, 189, 7);
-  }
-}
-
-.search-btn {
-  background-color: rgb(34, 146, 17);
-}
-
-.date {
-  width: 100%;
-  max-width: 100%; /* Ensures it doesn't exceed parent container */
-  padding: 8px;
 }
